# fin-cli

./: .gitignore  README.md  implementation-roadmap.md  proposed-plan.md  pyproject.toml  requirements.txt
docs/: accounts-config.md  compare.md  investments.md  manual-journal.md  review-tui-spec.md  transaction-schema.md  tyme-import.md
finance/: __init__.py  config.py  paths.py
finance/cli/: main.py
finance/importers/: tyme_csv.py
finance/models/: __init__.py  alias.py  investment.py  rules.py  state.py  transaction.py
finance/providers/: __init__.py  base.py  investec.py
finance/services/: __init__.py  compare.py  data_repo.py  import_statement.py  init_data.py  investments.py  journal.py  migrate.py  reports.py  review.py  rules.py  suggestions.py  sync.py  transactions.py
finance/storage/: __init__.py  accounts_store.py  alias_store.py  investment_store.py  journal_store.py  jsonl_store.py  rules_store.py  state_store.py
finance/tui/: __init__.py  categorize.py  compare.py
